ReadMe atualizado com documentaçao